# Rfut

./: .env  keep_alive.py  main.py  pyproject.toml  textbased.py
TextDB/: 8ball.txt  Comandos.txt  Roles.txt
